--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,3 +24,20 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.title-font {
+  font-family: 'Caudex', serif;
+}
+
+.title-font-color {
+  color: #fbe2b9;
+}
+
+.bg-yellow {
+  background-color: #fbe2b9;
+}
+
+.stroke-text {
+  -webkit-text-stroke-width: 2px;
+  -webkit-text-stroke-color: #162556;
+}
